--- a/shelter/appsettings.json
+++ b/shelter/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=shelter;Trusted_Connection=True;TrustServerCertificate=true"
+  }
 }
