--- a/shelter/shelter.csproj
+++ b/shelter/shelter.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\BLL\BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
